<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/s20008_background_login"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/login_app_name"
            android:layout_width="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:text="@string/login_app_name"
    />

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@android:color/white"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
        >

            <TextView
                    android:id="@+id/login_text1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/login_text1"
                    android:textSize="30sp"
                    android:textColor="@android:color/background_dark"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/login_text2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/login_text2"
                    android:textSize="18sp"
                    android:textColor="@android:color/darker_gray"
            />

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
                <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/login_name_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_name_input_hint"
                        android:textColor="@android:color/background_dark"
                        android:textColorHint="@android:color/darker_gray"
                />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                    android:id="@+id/login_start_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:layout_marginTop="10dp"
                    android:text="@string/login_start_button"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
            />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>